--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/http": "5.2.9",
     "@angular/platform-browser": "5.2.9",
     "@angular/platform-browser-dynamic": "5.2.9",
+    "@ionic-native/badge": "^4.6.0",
     "@ionic-native/core": "4.6.0",
     "@ionic-native/google-play-games-services": "^4.6.0",
     "@ionic-native/splash-screen": "4.6.0",
@@ -30,6 +31,7 @@
     "cordova-android": "7.0.0",
     "cordova-browser": "5.0.3",
     "cordova-ios": "4.5.4",
+    "cordova-plugin-badge": "^0.8.7",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-ionic": "^4.1.3",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
@@ -62,7 +64,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-play-games-services": {
         "APP_ID": "768177729199"
-      }
+      },
+      "cordova-plugin-badge": {}
     },
     "platforms": [
       "ios",
